--- a/.github/workflows/tests-e2e.yml
+++ b/.github/workflows/tests-e2e.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - master
       - docusaurus-v**
     paths:
       - package.json
@@ -14,6 +15,7 @@ on:
   pull_request:
     branches:
       - main
+      - master
       - docusaurus-v**
     paths:
       - package.json
