Fix wrong URL keys as formatLighthouseReport input & Run lighthouse PR'ed branch

--- a/.github/workflows/lighthouse-report.yml
+++ b/.github/workflows/lighthouse-report.yml
@@ -1,11 +1,7 @@
 name: Lighthouse Report
 
 on:
-  pull_request_target:
-    branches:
-      - main
-      - master
-      - docusaurus-v**
+  pull_request:
 
 permissions:
   contents: read
@@ -40,13 +36,13 @@ jobs:
         uses: treosh/lighthouse-ci-action@03becbfc543944dd6e7534f7ff768abb8a296826 # 10.1.0
         with:
           urls: |
-            http://localhost:3000
-            http://localhost:3000/docs/installation
-            http://localhost:3000/docs/category/getting-started
-            http://localhost:3000/blog
-            http://localhost:3000/blog/preparing-your-site-for-docusaurus-v3
-            http://localhost:3000/blog/tags/release
-            http://localhost:3000/blog/tags
+            http://localhost:3000/docusaurus/
+            http://localhost:3000/docusaurus/docs/installation
+            http://localhost:3000/docusaurus/docs/category/getting-started
+            http://localhost:3000/docusaurus/blog
+            http://localhost:3000/docusaurus/blog/preparing-your-site-for-docusaurus-v3
+            http://localhost:3000/docusaurus/blog/tags/release
+            http://localhost:3000/docusaurus/blog/tags
           configPath: ./.github/workflows/lighthouserc.json
           uploadArtifacts: true
           temporaryPublicStorage: true
