Migrate docs to docusaurus.qubitpi.org

--- a/.github/workflows/doc-ci-cd.yml
+++ b/.github/workflows/doc-ci-cd.yml
@@ -29,8 +29,12 @@ jobs:
         run: |
           cd website
           yarn build:fast
+      - name: Load CNAME file
+        run: |
+          cd website
+          cp CNAME build
       - name: Deploy to GitHub Pages
-        if: github.ref == 'refs/heads/master'
+        # if: github.ref == 'refs/heads/master'
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
